# IGA_for_bsplyne

./: .gitignore  README.md  pyproject.toml  setup.py
IGA_for_bsplyne/: Dirichlet.py  IGAPatch.py  ProblemIGA.py  __init__.py
doc/: IGA_for_bsplyne.html  Makefile  index.html  search.js
doc/IGA_for_bsplyne/: Dirichlet.html  IGAPatch.html  ProblemIGA.html
docs/: IGA_for_bsplyne.html  Makefile  search.js
docs/IGA_for_bsplyne/: Dirichlet.html  IGAPatch.html  ProblemIGA.html  fallback_sparse_qr.html  solvers.html
docs/api_txt/: IGA_for_bsplyne.Dirichlet.txt  IGA_for_bsplyne.IGAPatch.txt  IGA_for_bsplyne.ProblemIGA.txt  IGA_for_bsplyne.fallback_sparse_qr.txt  IGA_for_bsplyne.solvers.txt  IGA_for_bsplyne.txt  doc.txt
examples/IGA_beam/: IGA_beam.py
examples/tutorial/: 02_dirichlet_linear_relations.py  05_patch_geometry_integration.py  09_problem_multipatch.py
exemples/IGA_beam/: IGA_beam.py
exemples/IGA_pinched_cylinder/: IGA_pinched_cylinder.py
exemples/different_density_beam/: different_density_beam.py
exemples/homogenized_rot/: homogenized_rot.py
exemples/tutorial/: 01_dirichlet_affine_map.py  03_constraint_handler_pipeline.py  04_patch_stiffness_rhs.py  06_patch_post_processing.py  07_patch_density.py  08_problem_single_patch.py
exemples/unit_cube_traction/: unit_cube_traction.py
exemples/unit_cube_traction/out_unit_cube_traction/: IGA.pvd  IGA_control_points_0_0.vtu  IGA_control_points_10_0.vtu  IGA_control_points_11_0.vtu  IGA_control_points_12_0.vtu  IGA_control_points_13_0.vtu  IGA_control_points_14_0.vtu  IGA_control_points_15_0.vtu  IGA_control_points_16_0.vtu  IGA_control_points_17_0.vtu  IGA_control_points_18_0.vtu  IGA_control_points_19_0.vtu  IGA_control_points_1_0.vtu  IGA_control_points_20_0.vtu  IGA_control_points_21_0.vtu  IGA_control_points_22_0.vtu  IGA_control_points_23_0.vtu  IGA_control_points_24_0.vtu  IGA_control_points_25_0.vtu  IGA_control_points_26_0.vtu  IGA_control_points_27_0.vtu  IGA_control_points_28_0.vtu  IGA_control_points_29_0.vtu  IGA_control_points_2_0.vtu  IGA_control_points_30_0.vtu  IGA_control_points_31_0.vtu  IGA_control_points_32_0.vtu  IGA_control_points_33_0.vtu  IGA_control_points_34_0.vtu  IGA_control_points_35_0.vtu  IGA_control_points_36_0.vtu  IGA_control_points_37_0.vtu  IGA_control_points_38_0.vtu  IGA_control_points_39_0.vtu  IGA_control_points_3_0.vtu  IGA_control_points_40_0.vtu  IGA_control_points_41_0.vtu  IGA_control_points_42_0.vtu  IGA_control_points_43_0.vtu  IGA_control_points_44_0.vtu  (+153 more)
src/IGA_for_bsplyne/: Dirichlet.py  IGAPatch.py  ProblemIGA.py  __init__.py  fallback_sparse_qr.py  solvers.py
