[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "IGA_for_bsplyne"
version = "1.0.0"
description = "A package for IGA elasticity."
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Dorian Bichet", email = "dbichet@insa-toulouse.fr" }
]

license = { file = "LICENSE" }

dependencies = [
    "numpy",
    "scipy",
    "tqdm",
    "numba"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research"
]

[project.urls]
Homepage = "https://github.com/Dorian210/IGA_for_bsplyne"
Repository = "https://github.com/Dorian210/IGA_for_bsplyne"
Issues = "https://github.com/Dorian210/IGA_for_bsplyne/issues"

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest"
]
docs = [
    "wkhtmltopdf",
    "pdoc>=12.0"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
