[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "IGA_for_bsplyne"
version = "1.0.3"
description = "A package for IGA elasticity."
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Dorian Bichet", email = "dbichet@insa-toulouse.fr" }
]

license = "CECILL-2.1"

dependencies = [
    "numpy>=1.20",
    "scipy>=1.8",
    "tqdm>=4.60",
    "numba>=0.55",
    "bsplyne>=1.0.6"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research"
]

[project.urls]
Homepage = "https://github.com/Dorian210/IGA_for_bsplyne"
Repository = "https://github.com/Dorian210/IGA_for_bsplyne"
Issues = "https://github.com/Dorian210/IGA_for_bsplyne/issues"

[project.optional-dependencies]
viz = [
    "bsplyne[viz]>=1.0.6"
]
dev = [
    "build",
    "twine",
    "pytest"
]
docs = [
    "wkhtmltopdf",
    "pdoc>=12.0"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
